--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "node-binance-api": "^0.13.1",
+    "socket.io": "^4.5.1",
     "tsc-watch": "^5.0.3"
   }
 }
